--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -6,3 +6,10 @@
     <p>Exhibition open until: {{ format_date painting.exhibition_date}}</p>
   </div>
 </section>
+<form>
+  <label>Enter Blog Title</label>
+  <input id="title" type="text" />
+  <label>Content</label>
+  <input id="content" type="text" />
+<button id="saveblog">Save Blog</button>
+</form>
