--- a/views/partials/painting-details.handlebars
+++ b/views/partials/painting-details.handlebars
@@ -1,10 +1,17 @@
-<section class="card">
-  <a href="/painting/{{id}}">
-    <header>{{title}}</header>
-
-    <div class="card-body">
-      <img src="/images/{{filename}}" alt="{{description}}">
-      <p>By: {{artist}}</p>
+<article class="post">
+    <div class="whole-post">
+        <div class="info-section">
+            <div class="post-name">
+                <a href="/post/{{id}}" class="links">{{title}}</a>
+            </div>
+            <div class="created-by">
+                <p id="comment-subtitle">
+                    Posted by <b>{{user.username}} </b> on <b>{{formatDate created_at}}</b>
+                </p>
+            </div>
+        </div>
+        <div class="content-section">
+            <p>{{content}}</p>
+        </div>
     </div>
-  </a>
-</section>
+</article>
