with content and title

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,16 @@
 <section class="new-post-section">
+    <form class="form -new-post-form">
+      <div class="form-group">
+        <label for="title-new-post">title:</label>
+        <input class="form-input" type="text" id="title-"/>
+      </div>
+      <div class="form-group">
+        <label for="contentl">content:</label>
+        <input class="form-input" type="text" id="content"/>
+      </div>
+     
+   
+    </form>
     <button type="submit" class="btn" id="create-new-post">+ Create new post</button>
 </section>
 
