--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,25 +8,8 @@
         <label for="contentl">content:</label>
         <input class="form-input" type="text" id="content"/>
       </div>
-     
-   
-    </form>
+     </form>
     <button type="submit" class="btn" id="create-new-post">+ Create new post</button>
 </section>
 
-
-{{#if posts.length}}
-<section>
-    <h2>Your Dashboard</h2>
-    <ul class="post-list">
-        {{#each posts as |post|}}
-        <li>
-            {{> post-info post}}
-            <a href="/dashboard/edit/{{post.id}}" class="edit-link">edit post</a>
-        </li>
-        {{/each}}
-    </ul>
-</section>
-{{/if}}
-
-<script src="/javascript/create-post.js"></script>
+<script src="/public/js/create-post.js"></script>
