--- a/views/add-post.handlebars
+++ b/views/add-post.handlebars
@@ -15,7 +15,8 @@
                     <label for="post-content">Content</label>
                     <textarea class="entry-field" id="post-content" name="post-content"></textarea>
                 </div>
-                <button type="submit" class="btn">Create</button>
+                <button type="submit" class="btn" id="create-new-post">Create</button>
+                
             </form>
         </div>
     </section>
