--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,5 @@
 <section class="new-post-section">
-    <form class="form -new-post-form">
+    {{!-- <form class="form -new-post-form">
       <div class="form-group">
         <label for="title-new-post">title:</label>
         <input class="form-input" type="text" id="title-"/>
@@ -8,8 +8,8 @@
         <label for="contentl">content:</label>
         <input class="form-input" type="text" id="content"/>
       </div>
-     </form>
-    <button type="submit" class="btn" id="create-new-post">+ Create new post</button>
+     </form> --}}
+    <button type="submit" class="btn" id="create-new-post">Create</button>
 </section>
 
 <script src="/public/js/create-post.js"></script>
